[project]
name = "Example agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-openai~=1.0",
    "livekit-plugins-silero>=1.0.21",
    "livekit-plugins-turn-detector>=1.0.21",
    "python-dotenv>=1.1.0",
]
